<resources>
    <string name="app_name">ParkTrack</string>
    <string name="splash_desc">Track your park with ease</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="create_new_account">Create new Account</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="save">Save</string>
</resources>