<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/authentication_bg"
    tools:context=".ui.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryBlue80Percent"
        android:padding="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="52sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/email"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ed_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="@drawable/background_rounded"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="20dp"
                android:paddingVertical="12dp"
                android:transitionName="email" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/password"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ed_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="@drawable/background_rounded"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingHorizontal="20dp"
                android:paddingVertical="12dp"
                android:transitionName="email" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:text="@string/login"
                android:textColor="@color/black"
                app:strokeColor="@android:color/holo_blue_dark"
                app:strokeWidth="1dp"
                android:textStyle="bold"
                app:backgroundTint="@color/white"
                app:cornerRadius="8dp" />

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:indeterminateTint="@color/white"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="24dp">

                <View
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="2dp"
                    android:background="@android:color/holo_blue_dark"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/or"
                    android:textStyle="bold"
                    android:padding="12dp"
                    android:textColor="@android:color/holo_blue_dark"/>

                <View
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="2dp"
                    android:background="@android:color/holo_blue_dark"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/don_t_have_an_account"
                android:layout_marginTop="16dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/create_new_account"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:textColor="@android:color/holo_blue_dark"
                android:textStyle="bold" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>